fix overflow

--- a/Titleist/test-48-Test XX: PDP Image Grid Test/styles.css
+++ b/Titleist/test-48-Test XX: PDP Image Grid Test/styles.css
@@ -11,6 +11,9 @@ div#pdpMain {
   position: sticky;
   top: 0px;
 }
+body {
+  overflow-x: hidden;
+}
 
 @media (min-width: 992px) {
   .thumbnails-container {
@@ -58,11 +61,6 @@ div#pdpMain {
   }
 }
 
-@media (min-width: 1350px) {
-  #pdpMain .product-core-info {
-    padding: 0px 160px;
-  }
-}
 @media only screen and (min-width: 1441px) {
   #pdpMain .product-core-info .product-col-2 {
     max-width: 475px !important;
